# Uroboros

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
include/: Camera.h  Cube.h  Light.h  Scene.h  Shader.h  ShaderProgram.h  Texture.h  camera.h  light.h  mesh.h  model.h  scene.h  shader.h  shaderprogram.h  texture.h
lib/Debug/: assimp-vc142-mtd.exp  glfw3.ilk  glfw3.lib  glfw3dll.exp  glfw3dll.lib
lib/Release/: assimp-vc142-mt.exp
lib/include/glad/: glad.h
lib/include/glm/detail/: glm.cpp  type_quat.hpp
lib/include/glm/ext/: matrix_clip_space.hpp  quaternion_common.hpp  quaternion_geometric.hpp  scalar_ulp.hpp  scalar_ulp.inl
lib/include/glm/gtc/: quaternion.hpp
lib/include/glm/gtx/: hash.hpp  intersect.hpp  io.inl  matrix_query.hpp  norm.hpp  quaternion.hpp  rotate_vector.hpp  string_cast.hpp
resources/models/bloodsucker-stalker/source/: Cat_Warrior.unity_1.mtl
resources/models/detector-bear-stalker/source/: Bear_Detector.fbx
resources/models/portrait/source/: Bust.mtl
resources/models/trevi-fountain/source/: Fontana.mtl
resources/shaders/: fragment.shader  fragment_phong.shader  model_loading_fragment.shader  vertex.shader
src/: Camera.cpp  Cube.cpp  Light.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  camera.cpp  glad.c  light.cpp  main.cpp  mesh.cpp  model.cpp  scene.cpp  shader.cpp  shaderprogram.cpp  texture.cpp
